--- a/Day - 02 Quote Generator/style.css
+++ b/Day - 02 Quote Generator/style.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,600;0,700;1,400&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
   font-family: 'Playfair Display', serif;
   box-sizing: border-box;
 }
@@ -24,19 +22,78 @@ body {
   box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.15);
 }
 
-.quota-box h2 {
-  font-size: 32px;
-  margin-bottom: 40px;
+/* Add this CSS code to your existing style.css */
+.title h2 {
+  position: relative;
+  padding-bottom: 10px;
+  display: inline-block; /* Make the h2 an inline block element */
 }
 
-.quota-box h2::after {
+.title h2::after {
   content: '';
-  width: 75px;
-  height: 3px;
-  border-radius: 3px;
-  background: rgb(23, 124, 229);
   position: absolute;
-  bottom: -10px;
+  bottom: 0;
   left: 50%;
-  transform: translate(-50%);
+  width: 33%; /* Set the width to 1/3 of the text width */
+  height: 3px; /* Adjust this value to control the thickness of the underline */
+  background-color: rgb(23, 124, 229) /* Set the color of the underline */;
+  transform: translateX(-50%);
+}
+
+.quote-box blockquote {
+  font-size: 26px;
+  min-height: 110px;
+}
+
+.quote-box blockquote::before,
+.quote-box blockquote::after {
+  content: '"';
+}
+
+.quote-box span {
+  display: block;
+  margin-top: 10px;
+  float: right;
+  position: relative;
+}
+
+.quote-box span::before {
+  content: '';
+  width: 20px;
+  height: 2px;
+  background-color: rgb(23, 124, 229);
+  position: absolute;
+  top: 50%;
+  left: -30px;
+}
+
+.btn-container {
+  width: 100%;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+.btn-container button {
+  background-color: rgb(23, 124, 229);
+  color: #fff;
+  border-radius: 25px;
+  border: 1px solid rgb(23, 124, 229);
+  width: 150px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+  cursor: pointer;
+}
+
+i {
+  margin-top: 3px;
+  margin-right: 5px;
+  font-size: 20px;
+}
+#tweet-btn {
+  background-color: #fff;
+  color: black;
 }
