--- a/Day - 03 Random Password Generator/style.css
+++ b/Day - 03 Random Password Generator/style.css
@@ -32,6 +32,9 @@ body {
   padding: 15px 15px;
   border-radius: 5px;
   border: none;
+  height: 48px;
+  display: flex;
+  justify-content: space-between;
 }
 
 button {
@@ -43,8 +46,34 @@ button {
   color: #fff;
   background-color: #0c8261;
   border-radius: 2px;
+  display: block;
 }
 
 i {
   margin-right: 5px;
+}
+
+#copy {
+  color: #0c8261;
+  align-self: right;
+  background-color: #fff;
+  padding: 13px;
+  border-radius: 0 3px 3px 0;
+  margin-top: 20px;
+  margin-left: -5px;
+  border-left: 1px solid lightgrey;
+  font-size: 19px;
+}
+
+span:hover {
+  color: #555;
+}
+#password {
+  display: inline-block;
+}
+
+.password-container {
+  display: flex;
+  justify-content: start;
+  align-items: start;
 }
